--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-10.26MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.04MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 乌克兰-3.17MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 未知国家-5.19MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
-  - {name: 🇯🇵 日本-5.33MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.51MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.05MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-8.70MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 未知国家-5.18MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
   - {name: 🇨🇳 台湾-13.66MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-5.59MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-14.10MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.04MB/s(Youtube:不良林)
-      - 乌克兰-3.17MB/s(Youtube:不良林)
-      - 未知国家-5.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.70MB/s(Youtube:不良林)
+      - 未知国家-5.18MB/s(Youtube:不良林)
       - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.04MB/s(Youtube:不良林)
-      - 乌克兰-3.17MB/s(Youtube:不良林)
-      - 未知国家-5.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.70MB/s(Youtube:不良林)
+      - 未知国家-5.18MB/s(Youtube:不良林)
       - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.04MB/s(Youtube:不良林)
-      - 乌克兰-3.17MB/s(Youtube:不良林)
-      - 未知国家-5.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.70MB/s(Youtube:不良林)
+      - 未知国家-5.18MB/s(Youtube:不良林)
       - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
@@ -75,11 +75,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.04MB/s(Youtube:不良林)
-      - 乌克兰-3.17MB/s(Youtube:不良林)
-      - 未知国家-5.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.70MB/s(Youtube:不良林)
+      - 未知国家-5.18MB/s(Youtube:不良林)
       - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
@@ -90,11 +90,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.04MB/s(Youtube:不良林)
-      - 乌克兰-3.17MB/s(Youtube:不良林)
-      - 未知国家-5.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.70MB/s(Youtube:不良林)
+      - 未知国家-5.18MB/s(Youtube:不良林)
       - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
@@ -106,11 +106,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.04MB/s(Youtube:不良林)
-      - 乌克兰-3.17MB/s(Youtube:不良林)
-      - 未知国家-5.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.70MB/s(Youtube:不良林)
+      - 未知国家-5.18MB/s(Youtube:不良林)
       - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
@@ -131,11 +131,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.04MB/s(Youtube:不良林)
-      - 乌克兰-3.17MB/s(Youtube:不良林)
-      - 未知国家-5.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.70MB/s(Youtube:不良林)
+      - 未知国家-5.18MB/s(Youtube:不良林)
       - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
