--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,68 +5,68 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.51MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.05MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-8.70MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 未知国家-5.18MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
-  - {name: 🇨🇳 台湾-13.66MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.15MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.41MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林), server: 213.183.53.208, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇳🇱 荷兰-1.53MB/s(Youtube:不良林), server: 213.183.59.214, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇺🇸 美国-5.18MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-12.09MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-5.59MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-14.10MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇺🇸 美国-362.7KB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.71MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.15MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.70MB/s(Youtube:不良林)
-      - 未知国家-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.70MB/s(Youtube:不良林)
-      - 未知国家-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.70MB/s(Youtube:不良林)
-      - 未知国家-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
       - 🔰 节点选择
@@ -75,47 +75,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.70MB/s(Youtube:不良林)
-      - 未知国家-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.70MB/s(Youtube:不良林)
-      - 未知国家-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.70MB/s(Youtube:不良林)
-      - 未知国家-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.70MB/s(Youtube:不良林)
-      - 未知国家-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
