--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-3.15MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.41MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林), server: 213.183.53.208, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇳🇱 荷兰-1.53MB/s(Youtube:不良林), server: 213.183.59.214, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇺🇸 美国-5.18MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 51.81.223.10, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-14.33MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.13MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇯🇵 日本-317.1KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-12.09MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-5.59MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-14.10MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
@@ -75,11 +75,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
@@ -90,11 +90,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
@@ -106,11 +106,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
@@ -131,11 +131,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
       - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
