--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-12.88MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.02MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.92MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林), server: 213.183.53.208, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇺🇸 美国-5.34MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-12.09MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-5.59MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-14.10MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-362.7KB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林), server: 213.183.53.177, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇩🇪 德国-1.82MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-702.1KB/s(Youtube:不良林), server: scloud28.jafiyun.life, port: 22028, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud28.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.83MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.90MB/s(Youtube:不良林), server: 213.183.59.214, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.99MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇺🇸 美国-5.24MB/s(Youtube:不良林), server: viibah6u.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: viibah6u.com}}
+  - {name: 🇺🇸 美国-5.81MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-527.4KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-12.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-527.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-12.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-527.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-12.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-527.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-12.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-527.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-12.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-527.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-12.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-527.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-12.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.09MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-527.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
